Add project ticket keys, configurable ticket types and member profiles
